--- a/Recipes_APP/Scenes/SearchScreen/RecipeDetailsCell/RecipeDetailsCell.xib
+++ b/Recipes_APP/Scenes/SearchScreen/RecipeDetailsCell/RecipeDetailsCell.xib
@@ -31,33 +31,74 @@
                                 <rect key="frame" x="165" y="0.0" width="300" height="305"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xKl-DL-jHh">
-                                        <rect key="frame" x="0.0" y="20" width="300" height="265"/>
+                                        <rect key="frame" x="5" y="20" width="290" height="265"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VWJ-we-deb">
-                                                <rect key="frame" x="0.0" y="0.0" width="300" height="210"/>
-                                                <string key="text">Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label Label</string>
-                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fb2-Kw-7G0">
-                                                <rect key="frame" x="0.0" y="220" width="300" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3h-5w-g5u">
-                                                <rect key="frame" x="0.0" y="250.5" width="300" height="14.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kd6-KB-H5f">
+                                                <rect key="frame" x="0.0" y="0.0" width="290" height="173"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipe Name:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Luk-MG-Bb1">
+                                                        <rect key="frame" x="0.0" y="0.0" width="93" height="173"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VWJ-we-deb">
+                                                        <rect key="frame" x="98" y="0.0" width="192" height="173"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="Luk-MG-Bb1" firstAttribute="width" secondItem="kd6-KB-H5f" secondAttribute="width" multiplier="0.32" id="6nm-sH-C0b"/>
+                                                </constraints>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ozW-hV-tiX">
+                                                <rect key="frame" x="0.0" y="183" width="290" height="36"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipe Source:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5QW-Yb-XBP">
+                                                        <rect key="frame" x="0.0" y="0.0" width="101.5" height="36"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fb2-Kw-7G0">
+                                                        <rect key="frame" x="106.5" y="0.0" width="183.5" height="36"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="5QW-Yb-XBP" firstAttribute="width" secondItem="ozW-hV-tiX" secondAttribute="width" multiplier="0.35" id="usv-P1-JW1"/>
+                                                </constraints>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="GW3-lV-yRo">
+                                                <rect key="frame" x="0.0" y="229" width="290" height="36"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipe Health Labels:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ma7-v1-KYM">
+                                                        <rect key="frame" x="0.0" y="0.0" width="101.5" height="36"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3h-5w-g5u">
+                                                        <rect key="frame" x="106.5" y="0.0" width="183.5" height="36"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="Ma7-v1-KYM" firstAttribute="width" secondItem="GW3-lV-yRo" secondAttribute="width" multiplier="0.35" id="b3B-Vh-syT"/>
+                                                </constraints>
+                                            </stackView>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="xKl-DL-jHh" firstAttribute="leading" secondItem="3j8-DC-8bN" secondAttribute="leading" id="Gr0-7v-T5b"/>
+                                    <constraint firstItem="xKl-DL-jHh" firstAttribute="leading" secondItem="3j8-DC-8bN" secondAttribute="leading" constant="5" id="Gr0-7v-T5b"/>
                                     <constraint firstItem="xKl-DL-jHh" firstAttribute="centerX" secondItem="3j8-DC-8bN" secondAttribute="centerX" id="hMG-P6-xDu"/>
                                     <constraint firstItem="xKl-DL-jHh" firstAttribute="top" secondItem="3j8-DC-8bN" secondAttribute="top" constant="20" id="nb6-uz-FVq"/>
                                     <constraint firstItem="xKl-DL-jHh" firstAttribute="centerY" secondItem="3j8-DC-8bN" secondAttribute="centerY" id="v51-Wf-Qv4"/>
@@ -85,7 +126,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="rectangle.inset.filled.and.person.filled" catalog="system" width="32" height="32"/>
+        <image name="rectangle.inset.filled.and.person.filled" catalog="system" width="128" height="87"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
